AArch64: jtreg test hotspot/test/gc/g1/TestJNIWeakG1/TestJNIWeakG1.java SEGV

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 8-aarch64, 10
    • Component/s: hotspot
    • None
    • b23
    • aarch64

        STDOUT:
        Check with jweak resolved
        running checkSanity
        running checkSurvival
        running checkClear
        running checkShouldNotClear
        Check passed
        Check with jweak returned
        running checkSanity
        running checkSurvival
        running checkClear
        running checkShouldNotClear
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x0000ffff806d0c00, pid=28077, tid=28158
        #
        # JRE version: OpenJDK Runtime Environment (10.0) (fastdebug build 10-internal+0-adhoc.ninjia02.gerrit)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 10-internal+0-adhoc.ninjia02.gerrit, compiled mode, tiered, compressed oops, g1 gc, linux-aarch64)
        # Problematic frame:
        # J 3546 TestJNIWeakG1.getReturnedWeak()Ljava/lang/Object; (0 bytes) @ 0x0000ffff806d0c00 [0x0000ffff806d0b00+0x0000000000000100]
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %P" (or dumping to /home/ninjia02/jdk/jdk10/build-fastdebug/JTwork/scratch/0/core.28077)
        #
        Unsupported internal testing APIs have been used.

        # An error report file with more information is saved as:
        # /home/ninjia02/jdk/jdk10/build-fastdebug/JTwork/scratch/0/hs_err_pid28077.log
        Loaded disassembler from hsdis-aarch64.so
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        Current thread is 28158
        Dumping core ...
        STDERR:
        rerun:
        DISPLAY=localhost:13.0 \
        HOME=/home/ninjia02 \
        LANG=en_US.UTF-8 \
        LC_ALL=en_US.UTF-8 \
        LD_LIBRARY_PATH=images/test/hotspot/jtreg/native \
        PATH=/bin:/usr/bin \
        CLASSPATH=/home/ninjia02/jdk/jdk10/build-fastdebug/JTwork/classes/0/gc/g1/TestJNIWeakG1:/home/ninjia02/Work/jdk/jdk10/gerrit/hotspot/test/gc/g1/TestJNIWeakG1:/home/ninjia02/jdk/jdk10/build-fastdebug/JTwork/classes/0/test/lib:/home/ninjia02/Work/jdk/jdk10/gerrit/test/lib:/home/ninjia02/Work/jdk/tools/jtreg/jtreg-hg/dist/jtreg/lib/javatest.jar:/home/ninjia02/Work/jdk/tools/jtreg/jtreg-hg/dist/jtreg/lib/jtreg.jar \
            /home/ninjia02/jdk/jdk10/build-fastdebug/./images/jdk/bin/java \
                -Dtest.src=/home/ninjia02/Work/jdk/jdk10/gerrit/hotspot/test/gc/g1/TestJNIWeakG1 \
                -Dtest.src.path=/home/ninjia02/Work/jdk/jdk10/gerrit/hotspot/test/gc/g1/TestJNIWeakG1:/home/ninjia02/Work/jdk/jdk10/gerrit/test/lib \
                -Dtest.classes=/home/ninjia02/jdk/jdk10/build-fastdebug/JTwork/classes/0/gc/g1/TestJNIWeakG1 \
                -Dtest.class.path=/home/ninjia02/jdk/jdk10/build-fastdebug/JTwork/classes/0/gc/g1/TestJNIWeakG1:/home/ninjia02/jdk/jdk10/build-fastdebug/JTwork/classes/0/test/lib \
                -Dtest.vm.opts='-ea -esa -server' \
                -Dtest.tool.vm.opts='-J-ea -J-esa -J-server' \
                -Dtest.compiler.opts= \
                -Dtest.java.opts= \
                -Dtest.jdk=/home/ninjia02/jdk/jdk10/build-fastdebug/./images/jdk \
                -Dcompile.jdk=/home/ninjia02/jdk/jdk10/build-fastdebug/./images/jdk \
                -Dtest.timeout.factor=8.0 \
                -Dtest.modules=java.base \
                -Dtest.nativepath=/home/ninjia02/jdk/jdk10/build-fastdebug/images/test/hotspot/jtreg/native \
                --add-modules java.base \
                -ea \
                -esa \
                -server \
                -Djava.library.path=/home/ninjia02/jdk/jdk10/build-fastdebug/images/test/hotspot/jtreg/native \
                -Xbootclasspath/a:. \
                -XX:+UnlockDiagnosticVMOptions \
                -XX:+WhiteBoxAPI \
                -XX:+UseG1GC \
                -XX:MaxTenuringThreshold=2 \
                -Xcomp \
                com.sun.javatest.regtest.agent.MainWrapper /home/ninjia02/jdk/jdk10/build-fastdebug/JTwork/gc/g1/TestJNIWeakG1/TestJNIWeakG1.d/main.2.jta

        TEST RESULT: Failed. Unexpected exit from test [exit code: 134]
        --------------------------------------------------

              Assignee:
              Ningsheng Jian (Inactive)
              Reporter:
              Ningsheng Jian (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: